Cleaned out content references in JS file for Plague Year.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@ page_nav: 'map-plague'
             </style>
         </div>
     </div>
+    <div style="display: none;" class="js-templates">
+        <div class="js-template pin-event">
+            <div style="max-height: 175px; overflow-y: scroll;">
+                <h3>[% itemName %]</h3>
+                [% itemContent %]
+            </div>
+        </div>
+    </div>
 {% include footer.html %}
 </body>
 </html>
