Updates to project index page, content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 page_nav: 'home'
 layout: home
-page_title: 'Itinerary at Hofstra Digital Research Center'
+page_title: 'Itinerary at The Digital Research Center at Hofstra University'
 ---
 <div class="video">Video #1 here</div>
 
