--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ page_nav: 'home'
 layout: home
 page_title: 'Itinerary at The Digital Research Center at Hofstra University'
 ---
-<div class="video">Video #1 here</div>
+<div class="video"></div>
 
 <p><a href="{{ site.baseurl }}/plague-year/">&ldquo;A Frightful Number!&rdquo;</a> and <a href="{{ site.baseurl }}/melville-in-rome/">Melville in Rome</a> are products of Itinerary, a project that integrates content or data gleaned from historical literature with historic and modern maps. The <a href="http://hofstradrc.org">Digital Research Center at Hofstra</a> shares this project as a demonstration of Itinerary&rsquo;s capabilities and as a starter kit that you may use to create your own&nbsp;maps.</p>
 
