--- a/videos/index.html
+++ b/videos/index.html
@@ -11,6 +11,6 @@ page_title: 'Itinerary at The Digital Research Center at Hofstra University'
     <figcaption>Video 2: Itinerary: Plague Year Codebase.</figcaption>
 </figure>
 
-<figure class="video">{% comment %}<iframe src="https://player.vimeo.com/video/172448288" width="640" height="371" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>{% endcomment %}
+<figure class="video"><iframe src="https://player.vimeo.com/video/172613320" width="640" height="371" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <figcaption>Video 3: Itinerary: Melville in Rome Codebase.</figcaption>
 </figure>
