--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ page_title: 'Itinerary at The Digital Research Center at Hofstra University'
     <figcaption><a href="videos">Videos 2 &amp; 3</a> cover the code used in each project.</figcaption>
 </figure>
 
-<p><a href="{{ site.baseurl }}/plague-year/">&ldquo;A Frightful Number!&rdquo;</a> and <a href="{{ site.baseurl }}/melville-in-rome/">Melville in Rome</a> are products of Itinerary, a project that integrates content or data gleaned from historical literature with historic and modern maps. The <a href="http://hofstradrc.org">Digital Research Center at Hofstra</a> shares this project as a demonstration of Itinerary&rsquo;s capabilities and as a starter kit that you may use to create your own&nbsp;maps.</p>
+<p><a href="{{ site.baseurl }}/plague-year/">&ldquo;A Frightful Number!&rdquo;</a> and <a href="{{ site.baseurl }}/melville-in-rome/">Melville in Rome</a> are products of Itinerary, a project that integrates content or data gleaned from historical literature with historic and modern maps. The <a href="http://hofstradrc.org">Digital Research Center at Hofstra</a> shares this project as a demonstration of Itinerary&rsquo;s capabilities and as a starter kit that you may use to create your own&nbsp;maps. For the full introduction, <a href="/itinerary/videos">watch all three&nbsp;videos</a>.</p>
 
 <h3>Links and Notes</h3>
 
