Added support for preflight and search

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ page_nav: 'home'
 layout: home
 page_title: 'Itinerary at The Digital Research Center at Hofstra University'
 ---
-{% include searchbox placeholder="Search..." %}
+
+<!--{% include searchbox placeholder="Search..." %}-->
+
 <figure class="video"><iframe src="https://player.vimeo.com/video/172448288" width="640" height="371" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <figcaption><a href="videos">Videos 2 &amp; 3</a> cover the code used in each project.</figcaption>
 </figure>
