Fix Manhattan page.

--- a/melville-in-manhattan/index.html
+++ b/melville-in-manhattan/index.html
@@ -1,6 +1,6 @@
 ---
-page_nav: 'map-melville-london'
-page_title: Melville in London
+page_nav: 'map-melville-manhattan'
+page_title: Melville in Manhattan
 ---
 <!DOCTYPE html>
 <html lang="en">
