Fix Manhattan title.

--- a/melville-in-manhattan/index.html
+++ b/melville-in-manhattan/index.html
@@ -5,7 +5,7 @@ page_title: Melville in Manhattan
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% assign data_title = "Melville in London" %}
+  {% assign data_title = "Melville in Manhattan" %}
   {% include head.html %}
 </head>
 <body class="melville-london">
