Add Early New York Map

--- a/early-new-york/index.html
+++ b/early-new-york/index.html
@@ -1,11 +1,11 @@
 ---
-page_nav: 'map-marti-manhattan'
-page_title: Martí in Manhattan
+page_nav: 'early-new-york'
+page_title: Early New York
 ---
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% assign data_title = "Martí in Manhattan" %}
+  {% assign data_title = "Early New York" %}
   {% include head.html %}
 </head>
 <body class="melville-london">
