Update name of C19 Latino NYC

--- a/c19-latino-nyc/index.html
+++ b/c19-latino-nyc/index.html
@@ -1,11 +1,11 @@
 ---
-page_nav: 'map-marti-manhattan'
-page_title: Martí in Manhattan
+page_nav: 'map-c19-latino-nyc'
+page_title: C19 Latino NYC
 ---
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% assign data_title = "Martí in Manhattan" %}
+  {% assign data_title = "C19 Latino NYC" %}
   {% include head.html %}
 </head>
 <body class="melville-london">
