--- a/melville-in-rome/index.html
+++ b/melville-in-rome/index.html
@@ -28,7 +28,7 @@ page_title: Melville in Rome
         var tile_layer_mapbox = 'https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png';
 
         // Please use your own Mapbox ID; not ours!
-        var mapbox_id = 'clearbold.l4gjpd88';
+        var mapbox_id = 'pk.eyJ1IjoiamFtaWVwZXJmb3JtYW50IiwiYSI6ImNremlwaXA5MjFsdm4ybm9iMHEzYjIxOHQifQ.q4Vd5s0ytIss1eVenZ7ZNw';
 
         // These values should correspond to your own map.
         var map_center = [41.897789138, 12.4776363373];
