Updates to serve the site from the root rather than a subdirectory.

--- a/melville-in-rome/index.html
+++ b/melville-in-rome/index.html
@@ -131,7 +131,7 @@ page_title: Melville in Rome
             {% capture i_str %}{{ i }}{% endcapture %}
             {% if event.type == 'w' and path.event == i_str %}
             <tr class="path-primary">
-                <td colspan="3" style="background: #f4fefd;"><img src="/itinerary/ui/img/path.png" style="width: 80px; height: auto;" /></td>
+                <td colspan="3" style="background: #f4fefd;"><img src="/ui/img/path.png" style="width: 80px; height: auto;" /></td>
                 <td class="path" colspan="8" style="background: #f4fefd;"><a href="#" data-path-id="path-{{ path.event }}-{{ path.id }}">{{ path.content }}</a></td>
             </tr>
             {% endif %}
@@ -141,7 +141,7 @@ page_title: Melville in Rome
             {% capture i_str %}{{ i }}{% endcapture %}
             {% if event.type == 'w' and path.event == i_str %}
             <tr class="path-alternate">
-                <td colspan="3" style="background: #fbfcf7;"><img src="/itinerary/ui/img/path.png" style="width: 80px; height: auto;" /></td>
+                <td colspan="3" style="background: #fbfcf7;"><img src="/ui/img/path.png" style="width: 80px; height: auto;" /></td>
                 <td class="path" colspan="8" style="background: #fbfcf7;"><a href="#" data-path-id="path-{{ path.event }}-{{ path.id }}">{{ path.content }}</a></td>
             </tr>
             {% endif %}
